--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="textBlue">#264653</color>
-    <color name="bgColor">#e9c46a</color>
+    <color name="bgColor">#F3E2B9</color>
     <color name="btnBgColor">#2a9d8f</color>
+    <color name="lightGrey">#b7b7a4</color>
 </resources>
